# PaneraBreadWarriors

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  quest_log.md
.github/workflows/: backend.yml  python_ci.yml
app/: __init__.py  database.py  test_db.py
app/models/: CLAUDE.md  events.py  urls.py  users.py
app/routes/: CLAUDE.md  __init__.py  events.py  redirect.py  urls.py  users.py
app/services/: __init__.py  cache.py  event_service.py  url_service.py  user_service.py
docs/: API.md  IncidentResponse.md  Reliability.md  Scalability.md  deployment_diagram.puml
helm/: api-deployment.yaml  api-hpa.yaml  api-ingress.yaml  api-pdb.yaml  api-service.yaml  appliation-grafana.yaml  application-prometheus.yaml  deployment.yaml  pdb.yaml  pgbouncer-deployment.yaml  pgbouncer-service.yaml  postgres-deployment.yaml  redis-deployment.yaml  redis-service.yaml  reset-load-test-job.yaml  service.yaml
loadtest/: load_test.py  locustfile.py
loadtest/results/: tier1-50users.csv_stats.csv  tier1-50users.csv_stats_history.csv  tier1-50users.html  tier2-200users.csv_stats.csv  tier2-200users.csv_stats_history.csv  tier2-200users.html  tier2-tune-200users.csv_stats.csv  tier2-tune-200users.csv_stats_history.csv  tier2-tune-200users.html  tier3-no-redis-tune-500users.csv_exceptions.csv  tier3-no-redis-tune-500users.csv_failures.csv  tier3-no-redis-tune-500users.html  (+6 more)
scripts/: reset_load_test_data.py  seed_database.py
seed/: __init__.py  events.csv  seed_events.py  seed_urls.py  seed_users.py  urls.csv  users.csv
tests/: conftest.py  readme.md
(+18 files in other folders)
